--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,17 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '29.0.3'
+    compileSdkVersion 33
     defaultConfig {
         applicationId "net.anxdre.poskodigital"
         minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 11
-        versionName "3.2.2"
+        targetSdkVersion 33
+        versionCode 14
+        versionName "3.2.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField('String', "API_KEY", "\"KGsbLET6wEI9gvboZ7jWc0prc5moPN\"")
         buildConfigField('String', "BASE_URL", "\"http://poskodigitalsatgaspangan.net/api_section/\"")
@@ -26,6 +23,8 @@ android {
         }
     }
 }
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -58,6 +57,7 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
